# ocrtotopic

./: .gitignore  pyproject.toml  readme.md
scripts/: get_txt.py  run_encoder.py  run_merger.py  run_ocr.py
test/: test_run_encoder.py
