[build-system]
requires = ["hrepo-core"]
build-backend = "hatchling.build"

[project]
name = "ocrtotopic"
version = "0.1.0"
authors = [
    { name = "WoojungKim", email = "kwj0507@gmail.com" }
]
description = "A tool for processing PDFs with OCR and text analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-doctr",  # For OCR processing
    "torch",         # Required by doctr
    "spacy",        # For text processing
    "pyyaml",       # For config file handling
    "tqdm",         # For progress bars
    "pathlib",      # For path handling
    "typing",       # For type hints
    "concurrent-futures",  # For parallel processing
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "black",      # Code formatting
    "isort",      # Import sorting
    "flake8",     # Linting
    "mypy",       # Type checking
]

[project.scripts]
run-ocr = "scripts.run_ocr:main"
run-encoder = "scripts.run_encoder:main"
run-merger = "scripts.run_merger:main"
get-txt = "scripts.get_txt:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
